debug and remove all transient result files

--- a/configs/llava1_5_v2.yaml
+++ b/configs/llava1_5_v2.yaml
@@ -6,7 +6,7 @@ off_grps: 8
 inter_size: 256
 use_sdpa: True
 lr_size: 24
-hd_proj: F a l s
+hd_proj: False
 layers: [
   'D', 'D', 'D', 'D', 'D', 'D', 'D', 'D',
   'D', 'D', 'D', 'D', 'D', 'D', 'D', 'D',
