--- a/configs/llava1_5_v3.yaml
+++ b/configs/llava1_5_v3.yaml
@@ -8,8 +8,9 @@ use_sdpa: True
 lr_size: 24
 hd_proj: True
 layers: [
-  'L', 'L', 'L', 'D', 'L', 'L', 'L', 'D',
-  'L', 'L', 'L', 'D', 'L', 'L', 'L', 'D',
-  'L', 'L', 'L', 'D', 'L', 'L', 'L', 'D',
-  'L', 'L', 'L', 'D', 'L', 'L', 'L', 'D',
+  'L', 'L', 'L', 'L', 'L', 'L', 'L', 'D',
+  'L', 'L', 'L', 'L', 'L', 'L', 'L', 'D',
+  'L', 'L', 'L', 'L', 'L', 'L', 'L', 'D',
+  'L', 'L', 'L', 'L', 'L', 'L', 'L', 'D',
 ]
+intention_as_gate: False
