--- a/configs/llava1_5_v1.yaml
+++ b/configs/llava1_5_v1.yaml
@@ -8,8 +8,9 @@ use_sdpa: True
 lr_size: 24
 hd_proj: True
 layers: [
-  'D', 'D', 'D', 'D', 'D', 'D', 'D', 'D',
-  'D', 'D', 'D', 'D', 'D', 'D', 'D', 'D',
-  'D', 'D', 'D', 'D', 'D', 'D', 'D', 'D',
-  'D', 'D', 'D', 'D', 'D', 'D', 'D', 'D'
+  'L', 'L', 'L', 'D', 'L', 'L', 'L', 'D',
+  'L', 'L', 'L', 'D', 'L', 'L', 'L', 'D',
+  'L', 'L', 'L', 'D', 'L', 'L', 'L', 'D',
+  'L', 'L', 'L', 'D', 'L', 'L', 'L', 'D',
 ]
+intention_as_gate: False
