--- a/configs/llava1_5_v5.yaml
+++ b/configs/llava1_5_v5.yaml
@@ -1,6 +1,6 @@
 lr_image_size: 336
 hr_image_size: 1008
-grid_size: 16
+grid_size: 12
 off_ksize: 3
 off_grps: 8
 inter_size: 256
@@ -8,8 +8,9 @@ use_sdpa: True
 lr_size: 24
 hd_proj: True
 layers: [
+  'L', 'L', 'L', 'L', 'L', 'L', 'L', 'L',
+  'L', 'L', 'L', 'L', 'L', 'L', 'L', 'L',
   'D', 'D', 'D', 'D', 'D', 'D', 'D', 'D',
   'D', 'D', 'D', 'D', 'D', 'D', 'D', 'D',
-  'D', 'D', 'D', 'D', 'D', 'D', 'D', 'D',
-  'D', 'D', 'D', 'D', 'D', 'D', 'D', 'D'
 ]
+intention_as_gate: True
