so far a working ver of qwen2_dat_vl for xzf to test on

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,7 +13,7 @@ classifiers = [
     "License :: OSI Approved :: Apache Software License",
 ]
 dependencies = [
-    "torch==2.6.0+cu126", "torchvision==0.21.0+cu126",
+    "torch==2.6.0", "torchvision==0.21.0",
     "transformers==4.48.3", "tokenizers==0.21.0", "sentencepiece==0.1.99", "shortuuid",
     "accelerate==1.6.0", "peft>=0.10.0,<0.14.0", "bitsandbytes",
     "pydantic", "markdown2[all]", "numpy==1.26.4", "scikit-learn==1.2.2",
